# genrl

./: pyproject.toml
kubernetes/code_generation/: proposer.yaml
recipes/code_gen/: code-gen-hivemind.yaml
src/genrl/communication/: communication.py
src/genrl/communication/hivemind/: hivemind_backend.py
src/genrl/examples/code_generation/: proposer.py  proposer_service.py  proposer_utils.py  requirements.txt  solver_data.py  solver_manager.py  solver_rewards.py  solver_utils.py
src/genrl/examples/rgym/: data.py
src/genrl/misc_utils/: sandbox_executor.py
src/genrl/trainer/: grpo_trainer.py
test/communication/hivemind/: test_hivemind_backend.py  test_put_and_get.py
test/examples/code_generation/: test_solver_rewards.py
test/misc_utils/: test_sandbox_executor.py
