[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[project]
name = "gensyn-genrl"
version = "0.1.9"
#dynamic = ["version"]
description = "A General RL framerwork in a swarm environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "hydra-core",
    "datasets",
    "transformers",
    "tensorboard",
    "wandb",
    "requests",
    "eth-account",
    "web3",
    "hivemind @ git+https://github.com/gensyn-ai/hivemind@639c964a8019de63135a2594663b5bec8e5356dd",
    "psutil",
    "msgpack",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

examples = ["trl", 
            "diffusers",
            "langchain-sandbox",
            "peft", 
            "reasoning-gym>=0.1.20"]
